deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-app
  template:
    metadata:
      labels:
        app: iot-app
    spec:
      containers:
      - name: iot-app
        image: vloth2602/iot-app:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
        readinessProbe:
          httpGet:
            path: /health
            port: 8888
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8888
          initialDelaySeconds: 5
          periodSeconds: 10
