service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vloth2602/iot-app-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: vloth2602/iot-app
  ports:
  - port: 8888
    targetPort: 8888
